--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryLight">#c8e4fe</color>
+    <color name="colorPrimary">#a5aeff</color>
+    <color name="colorPrimaryDark">#6b76ff</color>
     <color name="colorAccent">#D81B60</color>
 </resources>
