--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -6,7 +6,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".NavigationActivity">
+        tools:context=".navigation.NavigationActivity">
 
     <TextView
             android:id="@+id/messageTextView"
