--- a/app/src/main/res/layout/item_note.xml
+++ b/app/src/main/res/layout/item_note.xml
@@ -16,6 +16,6 @@
             android:layout_marginTop="@dimen/item_margin_default"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/noteDescriptionView"
+            android:id="@+id/descriptionView"
             android:layout_marginEnd="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
