--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -16,7 +16,6 @@
             android:layout_marginTop="@dimen/item_margin_default"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/taskTitleView"
+            android:id="@+id/titleView"
             android:layout_marginEnd="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
