--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -4,7 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/simple_item_view_height"
+        android:layout_height="wrap_content"
 
 >
 
@@ -18,4 +18,16 @@
             app:layout_constraintStart_toStartOf="parent"
             android:id="@+id/titleView"
             android:layout_marginEnd="8dp"/>
+
+    <LinearLayout
+        android:id="@+id/todoContainer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/titleView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+    >
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
