Java custom view for todos

--- a/app/src/main/res/layout/view_todo.xml
+++ b/app/src/main/res/layout/view_todo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<com.beloushkin.android.learn.notes.views.TodoView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -30,4 +30,4 @@
             android:layout_marginStart="@dimen/item_margin_default"
             android:layout_marginEnd="@dimen/item_margin_default"
     />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</com.beloushkin.android.learn.notes.views.TodoView>
