two different holders as customviews in RW

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,5 +12,5 @@
     <dimen name="text_size_medium">16sp</dimen>
     <dimen name="text_size_small">12sp</dimen>
 
-    <dimen name="elevation_default">2</dimen>
+    <dimen name="elevation_default">2dp</dimen>
 </resources>
