--- a/app/src/main/res/layout/fragment_create_note.xml
+++ b/app/src/main/res/layout/fragment_create_note.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".create.CreateNoteFragment">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".create.CreateNoteFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <EditText
+            android:id="@+id/noteEditText"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Notes fragment"/>
-
-</FrameLayout>
+            android:layout_height="wrap_content"
+            android:inputType="textLongMessage"
+            android:hint="@string/hint_add_note"
+            android:background="@color/transparent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="@dimen/item_margin_default"
+            android:layout_marginStart="@dimen/item_margin_default"
+            android:layout_marginEnd="@dimen/item_margin_default"
+    />
+</androidx.constraintlayout.widget.ConstraintLayout>
