--- a/app/src/main/res/layout/view_create_todo.xml
+++ b/app/src/main/res/layout/view_create_todo.xml
@@ -6,6 +6,7 @@
 
     <ImageView
             android:id="@+id/imageView"
+            android:src="@drawable/ic_plus"
             android:layout_width="@dimen/image_icon_default"
             android:layout_height="@dimen/image_icon_default"
             app:layout_constraintStart_toStartOf="parent"
