--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -10,14 +10,27 @@
 
     <TextView
             android:text="Title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/item_margin_default"
             android:layout_marginTop="@dimen/item_margin_default"
+            android:id="@+id/titleView"
+            android:layout_marginEnd="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:id="@+id/titleView"
-            android:layout_marginEnd="8dp"/>
+            app:layout_constraintEnd_toStartOf="@id/imageButton"
+    />
+    <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="@dimen/image_icon_default"
+            android:layout_height="@dimen/image_icon_default"
+            android:src="@drawable/ic_delete"
+            android:background="@color/transparent"
+            android:layout_marginEnd="@dimen/item_margin_default"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/titleView"
+            app:layout_constraintBottom_toBottomOf="@id/titleView"
+    />
 
     <LinearLayout
         android:id="@+id/todoContainer"
